<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingTimer"
    android:background="#DEEDCB">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#084C0B"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_unit"
            android:textSize="28sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/textview_show_countdowntimer">
        <TextView
            android:layout_weight="2"
            android:id="@+id/showCountDownTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textColor="@android:color/black"
            android:textSize="70sp"
            android:textAlignment="center"/>
        <ImageButton
            android:id="@+id/btnSetting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_settings_24"
            android:layout_margin="5dp"
            android:background="@drawable/setting_button"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btn_Start_and_Pause"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#183E19"
            android:background="@drawable/button_style_background"/>
        <Button
            android:id="@+id/btn_Restart"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#700B0B"
            android:layout_marginTop="10dp"
            android:layout_margin="10dp"
            android:visibility="invisible"
            tools:visibility="visible"
            android:background="@drawable/button_style_background"/>
    </LinearLayout>

</LinearLayout>