<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DrinkTimer"
    android:background="#DEEDCB">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#084C0B"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drink_unit"
            android:textSize="28sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/showCountDownTime"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textColor="@android:color/black"
        android:textSize="70sp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/textview_show_countdowntimer"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btn_Start_and_Pause"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#183E19"
            android:visibility="invisible"
            android:background="@drawable/button_style_background"/>
        <Button
            android:id="@+id/btn_Restart"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/reset"
            android:textStyle="bold"
            android:textColor="#700B0B"
            android:layout_marginTop="10dp"
            android:layout_margin="10dp"
            android:visibility="invisible"
            tools:visibility="visible"
            android:background="@drawable/button_style_background"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:background="#EAE192">
        <Button
            android:id="@+id/btnCoffeeTime"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="☕"
            android:textSize="50sp"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"/>
        <Button
            android:id="@+id/btnTeaBagTime"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="🍵"
            android:textSize="50sp"
            android:background="@drawable/button_background"/>

    </LinearLayout>

</LinearLayout>