<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#DEEDCB">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#084C0B"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countdowntimer"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_timer"
        android:textColor="#116114"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="#EAE192"
        android:layout_marginTop="80dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#EAE192">

        <ImageButton
            android:id="@+id/btnSettingTime"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_baseline_timer_24"
            android:background="@drawable/button_background"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/timer_unit"
        android:textColor="#116114"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="#EAE192"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#EAE192">

        <ImageButton
            android:id="@+id/btnInstantNoodles"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_instant_noodles"
            android:background="@drawable/button_background"/>

        <ImageButton
            android:id="@+id/btnDrinking"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_drink"
            android:background="@drawable/button_background"
            android:layout_margin="10dp"/>

        <ImageButton
            android:id="@+id/btnFood"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_food"
            android:background="@drawable/button_background"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_ID">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</LinearLayout>